# chainsafe-interview-task

./: Cargo.toml  README.md  contract.sol
src/: main.rs
